--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "octokit": "^2.0.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
