--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -24,6 +25,7 @@
     "octokit": "^2.0.10"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
     "@types/http-errors": "^2.0.1",
     "@types/node": "^18.11.9",
