--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,ts}\"",
     "lint": "eslint --cache \"**/*.{js,ts}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install:clean": "shx rm -rf dist && rm -rf node_modules && pnpm install"
+    "install:clean": "shx rm -rf dist && rm -rf node_modules && pnpm install",
+    "dc:up": "docker-compose up --build -d",
+    "dc:down": "docker-compose down"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +40,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "prisma": "^4.6.1",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
