--- a/resources/api/rest/v1.yaml
+++ b/resources/api/rest/v1.yaml
@@ -258,6 +258,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiError'
                 
+  /v1/bears/compute:
+    post:
+      tags:
+        - bears
+      description: Download the Bear generated based on the provided Trait Attributes.
+      operationId: computeBear
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ComputeBearRequest'
+      responses:
+        '200':
+          description: Returns the generated Bear image.
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
+        '500':
+          description: Unknown server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+                
 components:
   schemas:
   
@@ -274,7 +300,7 @@ components:
     BearId:
       type: string
       format: uuid
-      description: Unique ID to identify an Okay Bear. This id is equal to the public key of the Bear NFT.
+      description: Unique ID to identify an Okay Bear.
       
     Category:
       type: object
@@ -357,6 +383,10 @@ components:
           type: string
           description: Bear name
           example: OkayBears#7227
+        public_key:
+          type: string
+          description: Public Key (NFT) of the Bear.
+          example: "8yqdnRERYiZFEC2efmvBRS5evyCkP91cwR7oHew79Pwy"
         number:
           type: number
           description: Bear number in the Collection
@@ -429,7 +459,17 @@ components:
           type: string
           description: URL pointing to the opned ticket which will be processed by the Team.
           example: https://github.com/okbcommunity/dreessing-room-cms/issues/221
-        
+
+    ComputeBearRequest:
+      type: object
+      required:
+        - attributes    
+      properties:
+        attributes:
+          type: array
+          items: 
+            $ref: '#/components/schemas/TraitId'
+
     ApiError:
       required:
         - error
