--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "install:clean": "shx rm -rf dist && rm -rf node_modules && pnpm install",
     "dc:up": "docker-compose up --build -d",
-    "dc:down": "docker-compose down"
+    "dc:down": "docker-compose down",
+    "pr:studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octokit/openapi-types": "^14.0.0",
     "@prisma/client": "^4.6.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
