--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
+    "jimp": "^0.16.2",
     "morgan": "^1.10.0",
     "octokit": "^2.0.10"
   },
