--- a/backend/package.json
+++ b/backend/package.json
@@ -29,13 +29,15 @@
     "http-errors": "^2.0.0",
     "jimp": "^0.16.2",
     "morgan": "^1.10.0",
-    "octokit": "^2.0.10"
+    "octokit": "^2.0.10",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
     "@types/http-errors": "^2.0.1",
     "@types/node": "^18.11.9",
+    "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "cross-env": "^7.0.3",
