--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
     "jimp": "^0.16.2",
     "morgan": "^1.10.0",
