--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.14",
     "@types/http-errors": "^2.0.1",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
@@ -48,10 +49,12 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
     "shx": "^0.3.4",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
